Change layout break from 400 to 600 for service list items (Design approved) Fix flex shrink bug on IE / Edge

--- a/src/modules/service_list/service_list.scss
+++ b/src/modules/service_list/service_list.scss
@@ -36,7 +36,7 @@
     margin-bottom: $sizeTiny;
 
     @include sizeCurve(padding, itemPadding, $serviceListCurves);
-    @include mq($from: tiny, $to: xsmall) {
+    @include mq($from: tiny, $to: small) {
       display: block;
     }
 
@@ -54,7 +54,7 @@
     margin-right: $sizeTiny;
 
     @include polyFluidSizing(max-height, $textHeightCurve);
-    @include mq($from: tiny, $to: xsmall) {
+    @include mq($from: tiny, $to: small) {
       margin-right: 0;
       margin-bottom: $sizeRegular;
     }
@@ -63,8 +63,9 @@
   &__item-button {
     display: inline-flex;
     min-width: unset;
+    flex-shrink: 0;
 
-    @include mq($from: tiny, $to: xsmall) {
+    @include mq($from: tiny, $to: small) {
       margin-top: $sizeTiny;
     }
   }
